login and sign out with sessions, weight logging to db

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -16,6 +17,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
