--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
