--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.6.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
